# MonoEye

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  monoeye_debug_on.bat  monoeye_diag.bat  monoeye_manual_logger.bat  monoeye_simple_diag.bat  monoeye_steam_launcher.bat
.github/workflows/: build.yml
install/windows/: clean_layers.bat  install.bat  monoeye_live_debugger.bat  uninstall.bat
installer/: MonoEyeInstaller.csproj  Program.cs  app.manifest
manifest/: XR_APILAYER_NOVENDOR_monoeye.json
scripts/: generate_dispatch.py  install_linux.sh  runtime_validator.py  spirv_to_header.py  validate_layer.py
shaders/: depth_warp.comp.glsl
src/: config.cpp  config.h  dispatch_table.cpp  dispatch_table.h  graphics_manager.cpp  graphics_manager.h  heartbeat.cpp  hooks_frame.cpp  hooks_session.cpp  hooks_swapchain.cpp  hooks_view.cpp  layer.h  layer_instance.cpp  layer_negotiation.cpp  layer_proc_addr.cpp  logging.cpp  logging.h  monoeye.def  monoeye.map  overlay_manager.cpp  overlay_manager.h  swapchain_tracker.cpp  swapchain_tracker.h  vulkan_interop.cpp  vulkan_interop.h  vulkan_utils.cpp  vulkan_utils.h  warp_pipeline.cpp  warp_pipeline.h  xr_generated_dispatch_table.cpp  xr_generated_dispatch_table.h
src/openvr_proxy/: openvr_proxy.cpp  openvr_proxy.h
src/tools/: layer_validator.cpp
switcher/: MainForm.cs  MonoEyeSwitcher.csproj  Program.cs  app.manifest
